# tauri-supertonic-poc

./: .gitignore  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  README.md
tauri-plugin-music-notification-fork/android/src/main/java/: ExamplePlugin.kt  MusicPlayerService.kt
tauri-plugin-music-notification-fork/guest-js/: index.ts
test-tonic-mob/: .gitignore  RESEARCH.md  package.json
test-tonic-mob/src/: App.css  App.tsx
test-tonic-mob/src-tauri/: Cargo.toml  tauri.conf.json
test-tonic-mob/src-tauri/capabilities/: default.json
test-tonic-mob/src-tauri/src/: lib.rs  main.rs  tts_helper.rs
test-tonic-mob/src/components/TTSPlayer/: PlayerControls.tsx  SentenceList.tsx  TTSPlayer.css  index.tsx
test-tonic-mob/src/hooks/: useAudioPlayer.ts  usePlaybackQueue.ts
test-tonic-mob/src/types/: audio.ts
