[package]
name = "test-tonic-mob"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "test_tonic_mob_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-upload = "2"
# Using local fork with media button event emission
tauri-plugin-music-notification-api = { path = "../../tauri-plugin-music-notification-fork" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# ONNX Runtime via ort crate
# - load-dynamic: Load libonnxruntime.so at runtime (required for Android)
# - Default features disabled to avoid auto-download of binaries
ort = { version = "2.0.0-rc.9", default-features = false, features = ["load-dynamic", "ndarray"] }
# Must match ort's ndarray version (0.17)
ndarray = { version = "0.17", features = ["rayon"] }
rayon = "1.10"
hound = "3.5"
rustfft = "6.2"
anyhow = "1.0"
unicode-normalization = "0.1"
regex = "1.10"
rand = "0.8"
rand_distr = "0.4"
libc = "0.2"
base64 = "0.22"
log = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"

